--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -8,10 +8,18 @@
 
 <div>
 
+    <a href="{% url 'create-room' %}">Create room</a>
+
     <div>
         {% for room in rooms %}
             <div>
+                <a href="{% url 'update-room' room.id %}">Edit Room</a>
+                <a href="{% url 'delete-room' room.id %}">Delete Room</a>
+                <br>
+                <span>@{{room.host.username}}</span>
                 <h5>{{room.id}} -- <a href="{% url 'room' room.id %}">{{room.name}}</a></h5>
+                <small>{{room.topic.name}}</small>
+                <hr>
             </div>
 
         {% endfor %}
