--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -5,25 +5,54 @@
 
 <h1>HOME Template</h1>
 
+<style>
+    .home-container {
+        display: grid;
+        grid-template-columns: 1fr 3fr;
+    }
+</style>
 
-<div>
 
-    <a href="{% url 'create-room' %}">Create room</a>
+<div class="home-container">
 
     <div>
-        {% for room in rooms %}
-            <div>
-                <a href="{% url 'update-room' room.id %}">Edit Room</a>
-                <a href="{% url 'delete-room' room.id %}">Delete Room</a>
-                <br>
-                <span>@{{room.host.username}}</span>
-                <h5>{{room.id}} -- <a href="{% url 'room' room.id %}">{{room.name}}</a></h5>
-                <small>{{room.topic.name}}</small>
-                <hr>
-            </div>
+        <h3>Browse Topics</h3>
+        <hr>
 
-        {% endfor %}
+        <div>
+            <a href="{% url 'home' %}">All</a>
+        </div>
+
+
+        {% for topic in topics %}
+        <div>
+            <a href="{% url 'home' %}?q={{topic.name}}">{{topic.name}}</a>
+        </div>
+
+        {%endfor%}
     </div>
+
+    <div>
+        <h5>{{rooms_count}} rooms available</h5>
+        <a href="{% url 'create-room' %}">Create room</a>
+
+        <div>
+            {% for room in rooms %}
+                <div>
+                    <a href="{% url 'update-room' room.id %}">Edit Room</a>
+                    <a href="{% url 'delete-room' room.id %}">Delete Room</a>
+                    <br>
+                    <span>@{{room.host.username}}</span>
+                    <h5>{{room.id}} -- <a href="{% url 'room' room.id %}">{{room.name}}</a></h5>
+                    <small>{{room.topic.name}}</small>
+                    <hr>
+                </div>
+    
+            {% endfor %}
+        </div>
+    </div>
+
+
 </div>
 
 
